--- a/css/blog.css
+++ b/css/blog.css
@@ -5,11 +5,24 @@ body.blog-theme {
   font-family: 'Inter', sans-serif;
 }
 
+.blog-theme .site-header {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+}
+
+.blog-name {
+  font-family: 'Inter', sans-serif;
+  color: black;
+}
+
 .blog-theme .container {
   max-width: 800px;
 }
 
-/* Tab styling moved to main.css */
+.blog-theme .tab.active {
+  border-bottom: 2px solid black;
+}
 
 .blog-theme h1, .blog-theme h2, .blog-theme h3 {
   font-weight: 500;
