fixed the animation and added the home page

--- a/css/blog.css
+++ b/css/blog.css
@@ -14,6 +14,7 @@ body.blog-theme {
 .blog-name {
   font-family: 'Inter', sans-serif;
   color: black;
+  font-weight: 600;
 }
 
 .blog-theme .container {
