--- a/css/investing.css
+++ b/css/investing.css
@@ -9,6 +9,12 @@ body.investing-theme {
   border-bottom: 2px solid #333;
   margin-bottom: 2rem;
   padding-bottom: 1rem;
+  background-color: #f7f2e5;
+}
+
+/* Mobile menu styles for investing theme */
+.investing-theme .tabs {
+  background-color: #f7f2e5;
 }
 
 .investing-name {
